# ChangeLog for www-client/opera
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.446 2010/02/11 09:59:37 jer Exp $

*opera-10.50_pre6219 (11 Feb 2010)

  11 Feb 2010; Jeroen Roovers <jer@gentoo.org> +opera-10.50_pre6219.ebuild:
  Version bump
  <http://my.opera.com/desktopteam/blog/2010/02/11/windows-beta-released-and
  -more>.

*opera-10.50_pre6208 (06 Feb 2010)

  06 Feb 2010; Jeroen Roovers <jer@gentoo.org> +opera-10.50_pre6208.ebuild:
  Version bump
  <http://my.opera.com/desktopteam/blog/2010/02/05/skin-fixes-unite-and-then
  -some>.

  01 Feb 2010; Jeroen Roovers <jer@gentoo.org> opera-10.50_pre6201.ebuild,
  opera-10.50_pre6204.ebuild:
  Add die() when dobin fails. Use mv again instead of doins to preserve
  filename permissions thanks to Jochen (bug #303066).

*opera-10.50_pre6204 (01 Feb 2010)

  01 Feb 2010; Jeroen Roovers <jer@gentoo.org> opera-10.50_pre6201.ebuild,
  +opera-10.50_pre6204.ebuild:
  Version bump <http://my.opera.com/desktopteam/blog/new-snapshot>.

  30 Jan 2010; Jeroen Roovers <jer@gentoo.org> opera-10.50_pre6201.ebuild:
  Use canonical install function instead of mv.

  30 Jan 2010; Jeroen Roovers <jer@gentoo.org> opera-10.50_pre6201.ebuild:
  Readd locales.

*opera-10.50_pre6201 (30 Jan 2010)

  30 Jan 2010; Jeroen Roovers <jer@gentoo.org> +opera-10.50_pre6201.ebuild:
  Version bump <http://my.opera.com/desktopteam/blog/accelerated-process>.

  28 Jan 2010; Jeroen Roovers <jer@gentoo.org> opera-10.10-r1.ebuild,
  opera-10.20_pre4744.ebuild:
  Better to just remove the call to md5check altogether.

*opera-10.10-r1 (28 Jan 2010)

  28 Jan 2010; Jeroen Roovers <jer@gentoo.org> +opera-10.10-r1.ebuild:
  Apply the same enhancement to 10.10.

  28 Jan 2010; Jeroen Roovers <jer@gentoo.org> opera-10.20_pre4744.ebuild:
  Do not run the md5check in install.sh since we already check the entire
  tarball ourselves. Do not advise not to worry about it either.
