@@ -4,22 +4,14 @@ AUX opera-freedesktop.patch 995 RMD160 9ebe36fa34b25a4ab151033a10f7b53494cb4a4a 
 AUX opera-gentoo.patch 2276 RMD160 6b68de743af9f420454e0555d242643dbcb45470 SHA1 7dbf662019b7e07df515d27f1519a0da86dce765 SHA256 bcfd73704420fd3bf4a191c1a018b4bb209031aab505544b5e95c24702b9ef01
 AUX opera-localepath.patch 433 RMD160 cdea79f8b020c921e658c704fdf3f4293197738a SHA1 9c07a7e9085a49af331578da841c5afdee36ea4b SHA256 2086ad1feee1572b2c487ca190c35a39c3c05679d4ceeb2f3777b62e2c8f2bfe
 AUX opera-simplify-desktop.patch 637 RMD160 017fea605f8a81aa4f48b6cc3081c990fffa3842 SHA1 eb2011ef0d4f8754bb43b506e27ef7b622ab8e91 SHA256 c0009b41727023b3d03faa7c891764d886e92641cb57d8fa762353c9137e0a74
-DIST opera-10.10-freebsd7-shared-qt3.i386.tar.bz2 11611506 RMD160 80e862533d1c1a89e4de442b1cf584a783cca3f8 SHA1 ce6df2142d109a4e102f086cefdbb99250d4a0fe SHA256 be8d7cbf7e542ac8720213f69ffddd94d524db03273fd4ed43078bffddbec2a7
 DIST opera-10.10.gcc4-bundled-qt4.i386.tar.bz2 16529068 RMD160 b10ddc7f727352e7ca9243b3d12bda88737b3f90 SHA1 9823c686ff2cce92da5b24f83cd6aa3982b2649b SHA256 bdec041032a798f4b8b492546269396d05987538376cc5d28acd9562849e8944
 DIST opera-10.10.gcc4-bundled-qt4.x86_64.tar.bz2 17297117 RMD160 2a3be809b1463858e444e19c32b596081dec0dd9 SHA1 9f744474dac1da9fc08ce16857f1b867620daf6e SHA256 25b9b119da04068d0b99a93446cdb5496ece81a4e2d387f9bc9ca274178713da
 DIST opera-10.10.gcc4-qt4.i386.tar.bz2 11691076 RMD160 c567e56211e096bfed792e52f016a9e12ea94115 SHA1 f6d2938acdc8bbe2d762521313892989fd62a8be SHA256 c35992860387a88303bfdc4b7fe354914a720e7fdebfd37025dbebe721e6467a
 DIST opera-10.10.gcc4-qt4.x86_64.tar.bz2 12537317 RMD160 db34e4a2b92965472ecc47cab7be9209c97c488b SHA1 6098ac4e4b2fd0519bdbfdb32dc97e50d17fd004 SHA256 63d7678414f3ac40917fda71d745d81d048dadd723da56300fd424542a012df8
-DIST opera-10.10.gcc4-shared-qt3.i386.tar.bz2 11708070 RMD160 4681757bff76a1c4edd75fc5985e4e16d6d4fa90 SHA1 fb49d4bf2f83c5acd47d347e84491e025308b7ee SHA256 ec5eed808935c21d7d09f883995e17cd3ee77b447c7ee2e7405c96fe38541d79
-DIST opera-10.10.gcc4-shared-qt3.ppc.tar.bz2 11858703 RMD160 2d28eb46c550515cac6d1bf042c1a72c33279738 SHA1 c1b48469cfbfcab38acd993ce3669ef3b90308cc SHA256 bfca95eb48aeea77c18823f1e34960028378a3ae149e0c760ab4fdf27330ec8f
-DIST opera-10.10.gcc4-shared-qt3.x86_64.tar.bz2 12538791 RMD160 269c812f2f4ade237718dc8e695f7e47370f575e SHA1 03dde588b1afcd38076be83bb7cf1c43bde38ff0 SHA256 7a60b23fb15cb5e9e25c2dd493cb815f7b87634bef8fa7657096a68da97a1ffc
-DIST opera-10.20-4744.freebsd7-shared-qt3.i386.tar.bz2 11804487 RMD160 cc289215512fd010815c58d2f6503e275f2adf90 SHA1 fab893daed3ac083dbf5a0c267bd2fc43a274fcf SHA256 62ef02f0c509106670b12706803bdbbcbb0201f64e4c4f793751e0f83272ed59
 DIST opera-10.20-4744.gcc4-bundled-qt4.i386.tar.bz2 16706241 RMD160 75a1e23d18e4ebf779fc4ad145d90d68c9a2c767 SHA1 d2a6326d3abb50f798e4ee305936d8a3d2c9b95e SHA256 0da70cf47b9161a3a114638760982eaca8d355935bf4f1db4c5b8f0109c860b6
 DIST opera-10.20-4744.gcc4-bundled-qt4.x86_64.tar.bz2 17487833 RMD160 68a6b54f2adb00ea39ddf3fce9d6f645a306e3e4 SHA1 8db87855b5ff70248997c4b03d3e4ceedeee9f64 SHA256 fa6de10d1920135cac53eaff6ab58a5b2096476b5f557bf3b7f36716bec72f98
 DIST opera-10.20-4744.gcc4-qt4.i386.tar.bz2 11884785 RMD160 aa05575b484206d9be554625d8b57c663c457b19 SHA1 9044d368b31be4273a29ea1ef1dbe674e05b7e75 SHA256 481a720c7ff0fecae8e80f16649d13347edb629015aed8e702810192d75fe25f
 DIST opera-10.20-4744.gcc4-qt4.x86_64.tar.bz2 12734457 RMD160 3d17082f9d0f27e75514ba3f38d1ae176e3d12d5 SHA1 9ee55a4eac4ffdfb86c0e8eaf4abbb1d6cc918ef SHA256 9933080087966a358c6dbff579957fc966dcbeb2eeb090bc9fc595e07908d20a
-DIST opera-10.20-4744.gcc4-shared-qt3.i386.tar.bz2 11913278 RMD160 912e815f5725a52000c9f234d8a9ebeed0682810 SHA1 aa3e4686264b0a16281a8bbb7ab57254c562aeed SHA256 52ff76e99c6eb0624630efd9b178796eb2cc1ad81e2cf4edc5d9cffd5348e713
-DIST opera-10.20-4744.gcc4-shared-qt3.ppc.tar.bz2 12073071 RMD160 c556f6875093d3352291e015ee98a87378c8ca4d SHA1 5459a705624e86731efb37f3ff64bd02739ef01e SHA256 a3db33c4ee39c2e105c186b5199f2224c22b542073be005bf4bcd7fa139cde29
-DIST opera-10.20-4744.gcc4-shared-qt3.x86_64.tar.bz2 12734043 RMD160 ec9851378ad1821d89af33d17f9f1c7fbaa6b6a8 SHA1 548ebc18438a929ea97e33b583e69fbce1219128 SHA256 0b3636e651d9fece3fe5d07e07be81cc5af0f1c0ce4d91ff3123c050351401a8
 DIST opera-10.50-6177.freebsd.i386.tar.bz2 8564346 RMD160 4db1d92b791a233bd5ab3d1b3329e8ef7c8bdaad SHA1 426f9578388b6cc1378e03aa92b4baaa080f4d35 SHA256 b64ff2fe27bf07de06a8d0136724de8bca019d761575d187138c4e6835bc8db1
 DIST opera-10.50-6177.linux.i386.tar.bz2 8571801 RMD160 0803dacdec6af0fc46d6ca04c5214da1e22a5eab SHA1 7743d2b430a657db7a8215c53c781898cca6acce SHA256 90527331777816127562324616d90ca8d17622cbda57564b54007e819887461e
 DIST opera-10.50-6177.linux.x86_64.tar.bz2 9397629 RMD160 d26ee30323fb097e76c72c78693ee614693ccff9 SHA1 28807a6f069b6bd6c2138fb6d565ffe6375a3fca SHA256 7910e54c0798e7224063f5387be8baed8e4fb77117be23c3689d026e240f1e65
@@ -34,13 +26,13 @@ DIST opera-10.50-6208.x86_64.linux.tar.bz2 13701636 RMD160 278bd0fd9c46796af96c4
 DIST opera-10.50-6219.i386.freebsd.tar.bz2 12284267 RMD160 2714ce1d0ca4fa7656065a1c6158a30af68344f8 SHA1 a53c00161a5d2804eccca93ae3e845772a6c2f0b SHA256 6803ed972f1df5f63371d31155551de0cb134d2c7f8d427d3e160de799d3157c
 DIST opera-10.50-6219.i386.linux.tar.bz2 12300574 RMD160 6d1604c5443ced1b20aa2e0c180a20f1ec89a9a4 SHA1 814298f6b9dbceff6a18cd113f73cdf757f010fa SHA256 a21c73d567e265d0f313f5ffc7ba5007c9af5124073f73bfb92b68fde96a28ec
 DIST opera-10.50-6219.x86_64.linux.tar.bz2 13163541 RMD160 f75b4b21d8eee179ebc393b227c86015530b236e SHA1 d98bb3c1b43bd0c424e26b9a9574f4ae176f841a SHA256 edb07e0dd11d02be0a5a5111801f2b95c67ae5532c552c853ccb880e33e14d25
-EBUILD opera-10.10-r1.ebuild 6110 RMD160 1dd3b4d00938107d37bed303e65e37bd45301530 SHA1 d76d918182259039130531983f034d9f71307f72 SHA256 21107a8b014ef51c6b041e072b7b0a5993bbabbb8aad8a3374aaacc889b7e692
-EBUILD opera-10.10.ebuild 6109 RMD160 dd1e59501f98ed60d4416485c8d5cab6593f2878 SHA1 720d00e0ead4ce50c9c1d9ed4c1763dcae85ebe9 SHA256 13473ec73af665451557a4495036a83b3bd1d353e605a84a4b9b35bdbb7c1994
-EBUILD opera-10.20_pre4744.ebuild 6283 RMD160 eea72b53cc8118ce7d2f6419612db4da520bb4e4 SHA1 788450cbc19a477e6f8ef008132ea1468e89c208 SHA256 ddc2a3a0c702b0f6f6d287941484cfd87c35dcf6a87190d65b11c6ea4366440c
+EBUILD opera-10.10-r1.ebuild 4893 RMD160 2733461c1ddbceae8a1177fb931693aedaaf8a2d SHA1 1c95510bf92b10420c5739c1e45cdf80aee07627 SHA256 36e9ec97cb0e8d5b01a0765e56ff7fda46f80e0590ca4342aaada9632bc62d3a
+EBUILD opera-10.10.ebuild 4893 RMD160 6691d79a5f95c3e3d0701b4129a481875399d587 SHA1 2bd8f1a8e97f79607afc1f2ad0edf8a4c80c7f62 SHA256 8dc65519c765759956195bad7bd25bade46c222bfeb10d9e5057bf4f7bb90565
+EBUILD opera-10.20_pre4744.ebuild 5121 RMD160 617c4aa20edf705dbfaf751b2cdedf00aced0654 SHA1 da93213ec053c941ad7b0cbbb235996cff23aa7c SHA256 f6e3517965158f6af6f7916172a8650b36468552e0e94fcd3a3e3a9b949b0b02
 EBUILD opera-10.50_pre6177.ebuild 3810 RMD160 0591e7fc6e5063dce01108c5a76aee69a75a82dc SHA1 b81814e5db724ce383cdbbd3cd67b8d730185df1 SHA256 0ee7de9ee0e3cbd2c1ab39d79dff8dcbbc0afd1a62748aa933dba8d04c15f6ae
 EBUILD opera-10.50_pre6201.ebuild 3910 RMD160 6071ff670caea5901a6978f3f5aae6763b38775a SHA1 c9617285df3c5c55aa803766260cf529efc5a023 SHA256 b1b85dfbaea2b9d2be5a9ee7b29328a696bc3be9ff608a8385c3628467892683
 EBUILD opera-10.50_pre6204.ebuild 3968 RMD160 8e850d11c71e0f20208114718d40ea11164d8535 SHA1 6aca4d78d259ffc01c135f5ee52fe2af45e0c0b9 SHA256 6db5f1f73e0f6d990a99527ac7eb6d173ea4be10a343447ac3dc5e3b797b0aa6
 EBUILD opera-10.50_pre6208.ebuild 3968 RMD160 dbfa58f887107e0ca3c2a2c4c5ee29e55b60b0a0 SHA1 b106e4103f27fda88b91e58d909c98ce2e5c58b2 SHA256 f5674b85b43a6465734afa60b243f0b12db7a60200aca8d0bcb1be22b7adccdf
 EBUILD opera-10.50_pre6219.ebuild 3968 RMD160 224cf6f4b995d0cdcbe6dc27f36a148c509111a1 SHA1 f554b2921778e98ee36de456fb1afb975fb9d18e SHA256 ed748b90acaae928f75d0a180b37903a5ba24fd3f9d23955f448c81252baaa51
-MISC ChangeLog 85370 RMD160 cbca64c017959aeddf334daec1d721080bcda85e SHA1 e81cf1dcb6e4b5ff13507ce57e93fcc8b1910cd5 SHA256 0b10c7f16905c8af559f717912b54b9067d21fe7f55a9fe24b231386dc9e38fd
+MISC ChangeLog 85619 RMD160 1b83dbc3808e2637ed6d96f7415ddad55248602c SHA1 a52555b03e1dba5907771c00e6dc2902ccfec0a1 SHA256 bfd5c7810d58270e50de0d7f41b29cf5efc2c3aec120977581e046ff3ad07fce
 MISC metadata.xml 547 RMD160 dabb86bc4db85881b0ce910ac05e63d16342e787 SHA1 9acc7ec7a62017ed7c9acfca301a3ea75e4e88d9 SHA256 9f70a9db124893d6a56a40615dbe8cccd015b836067d570a9638a9bd9ec6217a
