@@ -1,6 +1,11 @@
 # ChangeLog for www-client/opera
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.446 2010/02/11 09:59:37 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.447 2010/02/16 18:13:18 jer Exp $
+
+  16 Feb 2010; Jeroen Roovers <jer@gentoo.org> opera-10.10.ebuild,
+  opera-10.10-r1.ebuild, opera-10.20_pre4744.ebuild:
+  Remove qt3 support and hence ppc and x86-fbsd support (bug #283430).
+  Remove unneeded qt-core dependency (qt-gui is enough).
 
 *opera-10.50_pre6219 (11 Feb 2010)
 
